<resources>
    <string name="application_name">GeoSwitch</string>

    <string name="menu_open_log">Open log</string>
    <string name="menu_export_kml">View history in Google Earth</string>
    <string name="dialog_dismiss_button">Dismiss</string>
    <string name="dialog_ok_button">Close</string>
    <string name="dialog_error_title">Error</string>

    <string name="activity_action_title">GeoSwitch/Action</string>
    <string name="activity_action_notification">Display notification</string>
    <string name="activity_action_playsound">Play sound</string>
    <string name="activity_action_speakout">Speak out</string>
    <string name="activity_action_sendhttp">Send HTTP POST request</string>
    <string name="activity_action_appendtoken">Append Google sign-in token to URL</string>
    <string name="activity_action_url">HTTP URL</string>
    <string name="activity_action_launch_button">Launch action now</string>
    <string name="activity_action_ok_button">OK</string>
    <string name="activity_action_cancel_button">Cancel</string>
    <string name="activity_action_validation_failed">Configuration is incomplete or invalid</string>
    <string name="activity_action_verifying_signin">Verifying sign-in...</string>
    <string name="activity_action_signin_failed">Sign-in failed. It will not be possible to append sign-in token.</string>

    <string name="activity_gps_title">GeoSwitch/GPS Activation</string>
    <string name="activity_gps_label">GPS sensor consumes much battery power. These options specify when GPS sensor is to be turned on for location tracking.</string>
    <string name="activity_gps_charger">On charger</string>
    <string name="activity_gps_bluetooth">When connected to a hands-free bluetooth device</string>
    <string name="activity_gps_carmode">In Android Auto mode</string>
    <string name="activity_gps_manual">Switch GPS manually</string>
    <string name="activity_gps_ok">OK</string>
    <string name="activity_gps_cancel">Cancel</string>

    <string name="activity_main_title">GeoSwitch</string>
    <string name="activity_main_status_active">Status: monitoring location</string>
    <string name="activity_main_status_inactive">Status: inactive</string>
    <string name="activity_main_substatus_waiting_gps">Waiting for GPS fix</string>
    <string name="activity_main_substatus_gps_time">"Last location info received at "</string>
    <string name="activity_main_substatus_manual_inactive">Tap switch to start monitoring location</string>
    <string name="activity_main_substatus_bycharger_inactive">Connect to charger to activate</string>
    <string name="activity_main_substatus_bybluetooth_inactive">Connect to bluetooth hands-free to activate</string>
    <string name="activity_main_substatus_incarmode_inactive">Put in Android Auto mode to activate</string>
    <string name="activity_main_gps_manual">GPS sensor activation is controlled manually</string>
    <string name="activity_main_gps_charging">GPS sensor is on when the device is on charger</string>
    <string name="activity_main_gps_bluetooth">GPS sensor is on when the device is connected to a bluetooth hands-free device</string>
    <string name="activity_main_gps_carmode">GPS sensor is on when the device is in Android Auto mode</string>
    <string name="activity_main_gps_button">GPS activation</string>
    <string name="activity_main_trigger_desc_enter_area" formatted="false">Triggers when entering %d meters radius circular area with center in (%s,%s)</string>
    <string name="activity_main_trigger_desc_exit_area" formatted="false">Triggers when exiting %d meters radius circular area with center in (%s,%s)</string>
    <string name="activity_main_trigger_desc_transition" formatted="false">Triggers when moving from %dm radius circular area with center in (%s,%s)  to %dm radius circular area with center in (%s,%s)</string>
    <string name="activity_main_trigger_invalid">Trigger not configured</string>
    <string name="activity_main_trigger_button">Configure trigger</string>
    <string name="activity_main_action_display_notification">Display notification</string>
    <string name="activity_main_action_play_sound">Play notification sound</string>
    <string name="activity_main_action_speak_out">Speak out</string>
    <string name="activity_main_action_post_with_token" formatted="false">Send HTTP POST request including Google Sign-In token to %s</string>
    <string name="activity_main_action_post" formatted="false">Send HTTP POST request to %s</string>
    <string name="activity_main_action_not_configured">Action not configured</string>
    <string name="activity_main_action_button">Configure action</string>
    <string name="activity_main_log_button">Open log</string>
    <string name="activity_main_trigger_updated_and_applied">Trigger updated and now is being monitored.</string>
    <string name="activity_main_trigger_updated">Trigger updated.</string>
    <string name="activity_main_action_updated">Action updated.</string>
    <string name="activity_main_activation_mode_updated">Activation mode updated.</string>
    <string name="activity_main_generating_kml">Generating KML file</string>
    <string name="activity_main_initial_config_done">A demo trigger has been created based on your location info. You are encouraged to see it on the map (Configure trigger->Select on Map) and give it a try.</string>
    <string name="activity_main_initial_config_failed">We were unable to determine your current location and did not create a demo trigger. Please configure a trigger by yourself!</string>
    <string name="activity_main_welcome_title">Welcome</string>
    <string name="activity_main_googleearth_not_installed">Cannot launch Google Earth, it is not installed.</string>

    <string name="activity_map_title">GeoSwitch/Map</string>
    <string name="activity_map_area">Area</string>
    <string name="activity_map_from">From</string>
    <string name="activity_map_to">To</string>

    <string name="activity_trigger_title">GeoSwitch/Trigger</string>
    <string name="activity_trigger_type">Type</string>
    <string name="activity_trigger_enter_radio">Enter</string>
    <string name="activity_trigger_exit_radio">Exit</string>
    <string name="activity_trigger_transition_radio">Transition</string>
    <string name="activity_trigger_enter_desc">Enter area</string>
    <string name="activity_trigger_exit_desc">Exit area</string>
    <string name="activity_trigger_transition_desc">Transition from one area to another</string>
    <string name="activity_trigger_area_section">Area</string>
    <string name="activity_trigger_from_section">From</string>
    <string name="activity_trigger_to_section">To</string>
    <string name="activity_trigger_latitude_label">Latitude</string>
    <string name="activity_trigger_latitude_hint">Latitude</string>
    <string name="activity_trigger_longitide_label">Longitude</string>
    <string name="activity_trigger_longitude_hint">Longitude</string>
    <string name="activity_trigger_radius_label">Radius</string>
    <string name="activity_trigger_radius_hint">Radius in meters</string>
    <string name="activity_trigger_map_button">Select on Map</string>
    <string name="activity_trigger_ok_button">OK</string>
    <string name="activity_trigger_cancel_button">Cancel</string>
    <string name="activity_trigger_area_invalid">Select Area for this trigger.</string>
    <string name="activity_trigger_transition_invalid">Select From and To areas for this trigger.</string>
    <string name="activity_trigger_radius_tip"><![CDATA[>100m recommended]]></string>
    <string name="activity_trigger_area_updated">Trigger area updated.</string>
    <string name="activity_trigger_transition_updated">Trigger areas updated.</string>
    <string name="activity_trigger_revert1">"Values modified. You might wish to "</string>
    <string name="activity_trigger_revert2"><u>revert</u></string>
    <string name="activity_trigger_values_reverted">Values reverted.</string>

    <string name="service_sticky_title">GeoSwitch: monitoring location</string>
    <string name="service_sticky_status_gps_time">"Last location info received at "</string>
    <string name="service_sticky_status_waiting_gps">Waiting for GPS fix</string>
    <string name="service_notification_title">GeoSwitch</string>
    <string name="service_trigger_fired">The location trigger has fired.</string>
    <string name="service_action_started">"Action started."</string>
    <string name="service_action_failed_refresh_token">Action failed. Could not connect to google server.</string>
    <string name="service_action_failed_no_internet">Action failed. No connection to internet</string>
    <string name="service_action_failed_with_error_code" formatted="false">Action failed. HTTP error code %d</string>
    <string name="service_action_succeeded">Action succeeded.</string>
    <string name="service_action_succeeded_with_server_response" formatted="false">Action succeeded. Server response: %s</string>
    <string name="service_action_failed_malformed_url">Action failed. Malformed URL</string>
    <string name="service_action_failed_unsupported_protocol">Action failed. Protocol not supported.</string>
    <string name="service_action_failed_to_open_connection">Action failed. Could not connect to server.</string>
    <string name="service_action_failed_unknown_host">Action failed. The host is unknown.</string>
    <string name="service_action_failed_write_error">Action failed. Could not send to server.</string>
    <string name="service_action_failed_read_error">Action failed. Could not read from server.</string>

</resources>
