<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_action"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.pp.rudiki.geoswitch.ActivityAction">

    <include
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/showNotificationCheckbox"
        android:onClick="ensureCheckboxesCohere"
        android:text="@string/activity_action_notification" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showNotificationCheckbox"
        android:layout_alignParentStart="true"
        android:id="@+id/playSoundCheckbox"
        android:layout_marginLeft="26dp"
        android:onClick="ensureCheckboxesCohere"
        android:text="@string/activity_action_playsound" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendPostCheckbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/appendSigninCheckbox"
        android:layout_marginLeft="26dp"
        android:onClick="ensureCheckboxesCohere"
        android:text="@string/activity_action_appendtoken" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playSoundCheckbox"
        android:layout_alignParentStart="true"
        android:id="@+id/speakOutCheckbox"
        android:onClick="ensureCheckboxesCohere"
        android:text="@string/activity_action_speakout" />

    <CheckBox
        android:text="@string/activity_action_sendhttp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speakOutCheckbox"
        android:layout_alignParentStart="true"
        android:id="@+id/sendPostCheckbox"
        android:onClick="ensureCheckboxesCohere" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:ems="10"
        android:id="@+id/urlEdit"
        android:textSize="14sp"
        style="@style/Widget.AppCompat.EditText"
        android:gravity="top|left"
        android:maxLines="20"
        android:layout_below="@+id/appendSigninCheckbox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text|textUri"
        android:hint="@string/activity_action_url"
        android:imeOptions="actionDone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="onLaunchActionClick"
        android:text="@string/activity_action_launch_button"
        android:layout_below="@+id/urlEdit"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

</LinearLayout>