<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trigger"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.pp.rudiki.geoswitch.ActivityTrigger">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/unidirectionalGroup">

            <Button
                android:text="@string/activity_trigger_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/okButton"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onOkClick" />

            <Button
                android:text="@string/activity_trigger_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton"
                android:layout_weight="1"
                android:layout_alignBaseline="@+id/okButton"
                android:layout_alignBottom="@+id/okButton"
                android:layout_toRightOf="@+id/okButton"
                android:layout_toEndOf="@+id/okButton"
                android:onClick="onCancelClick" />

        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/triggerTypeLabel"
            android:layout_width="62dp"
            android:gravity="center_vertical"
            android:layout_alignBottom="@+id/triggerTypeRadioGroup"
            android:text="@string/activity_trigger_type" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bidirectionalGroup"
            android:layout_below="@+id/triggerTypeDescriptionLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/activity_trigger_latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitudeLabelBi"
                android:layout_alignBottom="@+id/latitudeEditBi"
                android:textSize="14sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="left|center"
                android:layout_toStartOf="@+id/longitudeEditBi"
                android:layout_toLeftOf="@+id/longitudeEditBi"
                android:layout_below="@+id/areaLabelBi" />

            <TextView
                android:text="@string/activity_trigger_longitide_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitudeLabelBi"
                android:textSize="14sp"
                android:layout_below="@+id/latitudeLabelBi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/longitudeEditBi"
                android:gravity="left|center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:layout_below="@+id/latitudeEditBi"
                android:layout_toRightOf="@+id/longitudeLabelBi"
                android:id="@+id/longitudeEditBi"
                android:hint="@string/activity_trigger_longitude_hint"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mapButtonBi"
                android:onClick="onMapClick"
                android:layout_below="@+id/longitudeEditBi"
                android:layout_toRightOf="@+id/longitudeLabelBi"
                android:layout_toEndOf="@+id/longitudeLabelBi"
                android:text="@string/activity_trigger_map_button" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/radiusEditBi"
                android:hint="@string/activity_trigger_radius_hint"
                android:layout_below="@+id/mapButtonBi"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/mapButtonBi"
                android:layout_alignStart="@+id/mapButtonBi"
                android:textSize="14sp" />

            <TextView
                android:text="@string/activity_trigger_radius_label"
                android:layout_height="wrap_content"
                android:id="@+id/radiusLabelBi"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@+id/radiusEditBi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/radiusEditBi"
                android:layout_toStartOf="@+id/radiusEditBi"
                android:layout_below="@+id/mapButtonBi" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/latitudeEditBi"
                android:hint="@string/activity_trigger_latitude_hint"
                android:textSize="14sp"
                android:layout_below="@+id/areaLabelBi"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/latitudeLabelBi"
                android:layout_toEndOf="@+id/latitudeLabelBi"/>

            <TextView
                android:text="@string/activity_trigger_area_section"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/areaLabelBi"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical|center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:layout_marginTop="12dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unidirectionalGroup"
            android:layout_weight="1"
            android:layout_below="@+id/bidirectionalGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/activity_trigger_from_section"
                android:layout_width="wrap_content"
                android:id="@+id/fromLabelUni"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="12dp" />

            <TextView
                android:text="@string/activity_trigger_latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitudeFromLabel"
                android:layout_alignTop="@+id/latitudeFromEditUni"
                android:layout_alignBottom="@+id/latitudeFromEditUni"
                android:layout_alignRight="@+id/longitudeFromLabel"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/activity_trigger_latitude_hint"
                android:ems="10"
                android:layout_below="@+id/fromLabelUni"
                android:id="@+id/latitudeFromEditUni"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/latitudeFromLabel"
                android:layout_toEndOf="@+id/latitudeFromLabel"
                android:inputType="none" />

            <TextView
                android:text="@string/activity_trigger_longitide_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitudeFromLabel"
                android:gravity="center_vertical"
                android:layout_below="@+id/latitudeFromLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/longitudeFromEditUni"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/activity_trigger_longitude_hint"
                android:ems="10"
                android:layout_below="@+id/latitudeFromEditUni"
                android:id="@+id/longitudeFromEditUni"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/longitudeFromLabel"
                android:layout_toRightOf="@+id/longitudeFromLabel"
                android:inputType="none" />

            <TextView
                android:text="@string/activity_trigger_to_section"
                android:layout_width="wrap_content"
                android:id="@+id/toLabelUni"
                android:layout_below="@+id/longitudeFromEditUni"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="25dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="8dp" />

            <TextView
                android:text="@string/activity_trigger_latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitudeToLabel"
                android:layout_alignTop="@+id/latitudeToEditUni"
                android:layout_alignBottom="@+id/latitudeToEditUni"
                android:layout_alignRight="@+id/longitudeFromLabel"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/activity_trigger_latitude_hint"
                android:ems="10"
                android:layout_below="@+id/toLabelUni"
                android:id="@+id/latitudeToEditUni"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/latitudeFromLabel"
                android:layout_toEndOf="@+id/latitudeFromLabel"
                android:inputType="none" />

            <TextView
                android:text="@string/activity_trigger_longitide_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitudeToLabel"
                android:gravity="center_vertical"
                android:layout_below="@+id/latitudeToLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/longitudeToEditUni"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/activity_trigger_longitude_hint"
                android:ems="10"
                android:layout_below="@+id/latitudeToEditUni"
                android:id="@+id/longitudeToEditUni"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/longitudeToLabel"
                android:layout_toRightOf="@+id/longitudeToLabel"
                android:inputType="none" />

            <Button
                android:text="@string/activity_trigger_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mapButtonUni"
                android:onClick="onMapClick"
                android:layout_below="@+id/longitudeToEditUni"
                android:layout_toRightOf="@+id/longitudeToLabel"
                android:layout_toEndOf="@+id/longitudeToLabel" />

            <TextView
                android:text="@string/activity_trigger_radius_label"
                android:layout_height="wrap_content"
                android:id="@+id/radiusLabelUni"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@+id/radiusEditUni"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/radiusEditUni"
                android:layout_toStartOf="@+id/radiusEditUni"
                android:layout_below="@+id/mapButtonUni" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/radiusEditUni"
                android:hint="@string/activity_trigger_radius_hint"
                android:layout_below="@+id/mapButtonUni"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/mapButtonUni"
                android:layout_alignStart="@+id/mapButtonUni"
                android:textSize="14sp" />


        </RelativeLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/triggerTypeLabel"
            android:layout_toEndOf="@+id/triggerTypeLabel"
            android:orientation='horizontal'
            android:id="@+id/triggerTypeRadioGroup"
            android:checkedButton="@+id/radioEnterArea">

            <RadioButton
                android:text="@string/activity_trigger_enter_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioEnterArea"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/activity_trigger_exit_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioExitArea"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/activity_trigger_transition_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioTransition"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:text="@string/activity_trigger_enter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/triggerTypeDescriptionLabel"
            android:layout_weight="1"
            android:layout_below="@+id/triggerTypeRadioGroup"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/triggerTypeLabel"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="6dp"
            android:gravity="center_horizontal"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

</ScrollView>
